cmd/tscc/testdata/ConcatError.txtar
# Ported from tests/cases/compiler/concatError.ts by tools/portcase.
# DO NOT EDIT by hand; re-run the porter if the upstream baseline changes.
! exec tscc --target es2015 --out-js concatError.js concatError.ts
stderr 'TS2454'
! exists concatError.js
! exists concatError.d.ts
! exists concatError.js.map

-- concatError.ts --
var n1: number[];
/*
interface Array<T> {
    concat(...items: T[][]): T[]; // Note: This overload needs to be picked for arrays of arrays, even though both are applicable
    concat(...items: T[]): T[];
}
*/
var fa: number[];

fa = fa.concat([0]);
fa = fa.concat(0);





/*




declare class C<T> {
	public m(p1: C<C<T>>): C<T>;
	//public p: T;
}

var c: C<number>;
var cc: C<C<number>>;

c = c.m(cc);
*/